# animations

L-systems/: CMakeLists.txt  customWidget.cpp  customWidget.h  main.cpp
physics/: CMakeLists.txt  customWidget.cpp  customWidget.h  main.cpp
